// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`triangle should default to a transparent background when not passed a backgroundColor 1`] = `
Object {
  "borderBottomColor": "transparent",
  "borderLeftColor": "red",
  "borderRightColor": "transparent",
  "borderStyle": "solid",
  "borderTopColor": "transparent",
  "borderWidth": "5px 0 5px 20px",
  "height": "0",
  "width": "0",
}
`;

exports[`triangle should generate a proper triangle when passed all parameters 1`] = `
Object {
  "borderBottomColor": "black",
  "borderLeftColor": "red",
  "borderRightColor": "black",
  "borderStyle": "solid",
  "borderTopColor": "black",
  "borderWidth": "5px 0 5px 20px",
  "height": "0",
  "width": "0",
}
`;

exports[`triangle should generate a proper triangle when passed all parameters with units on width/height 1`] = `
Object {
  "borderBottomColor": "black",
  "borderLeftColor": "red",
  "borderRightColor": "black",
  "borderStyle": "solid",
  "borderTopColor": "black",
  "borderWidth": "5em 0 5em 20em",
  "height": "0",
  "width": "0",
}
`;

exports[`triangle should generate a proper triangle when passed string values for height and width 1`] = `
Object {
  "borderBottomColor": "black",
  "borderLeftColor": "red",
  "borderRightColor": "black",
  "borderStyle": "solid",
  "borderTopColor": "black",
  "borderWidth": "5px 0 5px 20px",
  "height": "0",
  "width": "0",
}
`;

exports[`triangle should properly add rules when block has existing rules 1`] = `
Object {
  "background": "red",
  "borderBottomColor": "transparent",
  "borderLeftColor": "grey",
  "borderRightColor": "transparent",
  "borderStyle": "solid",
  "borderTopColor": "transparent",
  "borderWidth": "5px 0 5px 20px",
  "height": "0",
  "width": "0",
}
`;

exports[`triangle should properly render bottom pointing arrow with red foregroundColor, width of 20px and height 20px 1`] = `
Object {
  "borderBottomColor": "transparent",
  "borderLeftColor": "transparent",
  "borderRightColor": "transparent",
  "borderStyle": "solid",
  "borderTopColor": "red",
  "borderWidth": "20px 5px 0 5px",
  "height": "0",
  "width": "0",
}
`;

exports[`triangle should properly render left pointing arrow with blue foregroundColor, width of 10px and height 20px 1`] = `
Object {
  "borderBottomColor": "transparent",
  "borderLeftColor": "transparent",
  "borderRightColor": "blue",
  "borderStyle": "solid",
  "borderTopColor": "transparent",
  "borderWidth": "10px 10px 10px 0",
  "height": "0",
  "width": "0",
}
`;

exports[`triangle should properly render right pointing arrow with width of 20px and height 10px 1`] = `
Object {
  "borderBottomColor": "transparent",
  "borderLeftColor": "red",
  "borderRightColor": "transparent",
  "borderStyle": "solid",
  "borderTopColor": "transparent",
  "borderWidth": "5px 0 5px 20px",
  "height": "0",
  "width": "0",
}
`;

exports[`triangle should properly render top pointing arrow with green foregroundColor, width of 20px and height 20px 1`] = `
Object {
  "borderBottomColor": "green",
  "borderLeftColor": "transparent",
  "borderRightColor": "transparent",
  "borderStyle": "solid",
  "borderTopColor": "transparent",
  "borderWidth": "0 10px 20px 10px",
  "height": "0",
  "width": "0",
}
`;
